# NotifyMCP

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
src/notifymcp/: __init__.py  config.py  publisher.py  server.py
tests/: test_config.py  test_publisher.py
