[project]
name = "notifymcp"
version = "0.1.0"
description = "FastMCP MQTT notification publisher"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Michael Bush" }
]
dependencies = [
  "fastmcp>=2.0.0,<3.0.0",
  "paho-mqtt>=2.1.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "ruff>=0.8.0,<1.0.0",
]

[project.scripts]
notifymcp = "notifymcp.server:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
